fix error, in which there was an annoying gap with full-stop above the navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,8 @@
-/* Google Font CDN Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 /* styles.css */
 body {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
     font-family: "Poppins" Arial, sans-serif;
 }
 
